--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
 
+body {
+    background-image: url(../images/mona-eendra-vC8wj_Kphak-unsplash.jpg);
+}
 
 .container {
     display: flex;
