--- a/styles/CloseButton.css
+++ b/styles/CloseButton.css
@@ -18,13 +18,13 @@
   .close-button > div {
     position: relative;
   }
-  .close-button-block {
+  .close-button-block, .close-button-block1, .close-button-block2 {
     width: 40px;
     height: 20px;
     position: relative;
     overflow: hidden;
   }
-  .close-button-block:before, .close-button-block:after {
+  .close-button-block:before, .close-button-block:after, .close-button-block1:before, .close-button-block1:after, .close-button-block2:before, .close-button-block2:after {
     content: "";
     position: absolute;
     bottom: 0;
@@ -38,17 +38,17 @@
     -webkit-transition: all ease-out 280ms;
     transition: all ease-out 280ms;
   }
-  .close-button-block:last-of-type {
+  .close-button-block:last-of-type, .close-button-block1:last-of-type, .close-button-block2:last-of-type {
     -webkit-transform: rotate(180deg);
             transform: rotate(180deg);
   }
-  .close-button .in .close-button-block:before {
+  .close-button .in .close-button-block:before, .close-button .in .close-button-block1:before, .close-button .in .close-button-block2:before {
     -webkit-transition-delay: 280ms;
             transition-delay: 280ms;
     -webkit-transform: translateX(20px) translateY(-20px) rotate(45deg);
             transform: translateX(20px) translateY(-20px) rotate(45deg);
   }
-  .close-button .in .close-button-block:after {
+  .close-button .in .close-button-block:after, .close-button .in .close-button-block1:after, .close-button .in .close-button-block2:after {
     -webkit-transition-delay: 280ms;
             transition-delay: 280ms;
     -webkit-transform: translateX(-22px) translateY(-22px) rotate(-45deg);
@@ -59,27 +59,27 @@
     top: 0;
     left: 0;
   }
-  .close-button .out .close-button-block:before {
+  .close-button .out .close-button-block:before, .close-button .out .close-button-block1:before, .close-button .out .close-button-block2:before {
     -webkit-transform: translateX(-5px) translateY(5px) rotate(45deg);
             transform: translateX(-5px) translateY(5px) rotate(45deg);
   }
-  .close-button .out .close-button-block:after {
+  .close-button .out .close-button-block:after, .close-button .out .close-button-block1:after, .close-button .out .close-button-block2:after {
     -webkit-transform: translateX(5px) translateY(5px) rotate(-45deg);
             transform: translateX(5px) translateY(5px) rotate(-45deg);
   }
-  .close-button:hover .in .close-button-block:before {
+  .close-button:hover .in .close-button-block:before, .close-button:hover .in .close-button-block1:before, .close-button:hover .in .close-button-block2:before {
     -webkit-transform: translateX(-5px) translateY(5px) rotate(45deg);
             transform: translateX(-5px) translateY(5px) rotate(45deg);
   }
-  .close-button:hover .in .close-button-block:after {
+  .close-button:hover .in .close-button-block:after, .close-button:hover .in .close-button-block1:after, .close-button:hover .in .close-button-block2:after {
     -webkit-transform: translateX(5px) translateY(5px) rotate(-45deg);
             transform: translateX(5px) translateY(5px) rotate(-45deg);
   }
-  .close-button:hover .out .close-button-block:before {
+  .close-button:hover .out .close-button-block:before, .close-button:hover .out .close-button-block1:before, .close-button:hover .out .close-button-block2:before {
     -webkit-transform: translateX(-20px) translateY(20px) rotate(45deg);
             transform: translateX(-20px) translateY(20px) rotate(45deg);
   }
-  .close-button:hover .out .close-button-block:after {
+  .close-button:hover .out .close-button-block:after, .close-button:hover .out .close-button-block1:after, .close-button:hover .out .close-button-block2:after {
     -webkit-transform: translateX(20px) translateY(20px) rotate(-45deg);
             transform: translateX(20px) translateY(20px) rotate(-45deg);
   }
