--- a/styles/preview.css
+++ b/styles/preview.css
@@ -21,6 +21,9 @@
 .weather, .attractions, .eateries {
   border-bottom: 1px solid black;
 }
+.park {
+  border-top: 1px black solid;
+}
 .dialogContent{
   padding: 1.5rem
 }
