--- a/styles/dropdowns.css
+++ b/styles/dropdowns.css
@@ -1,8 +1,14 @@
 .parkFilter, .attractionsFilter, .eateryFilter {
     margin: 1rem;
     padding: 1rem;
+    width: 20%;
+    
 }
+
 .attractionsFilter{
     border: 1px black;
     border-style: none solid none solid;
+}
+#parkSelect, .dropdown {
+    width: 80%;
 }
