added header image, still need to style

--- a/styles/main.css
+++ b/styles/main.css
@@ -12,8 +12,8 @@ header {
     justify-content: space-evenly;
     flex-direction: row-reverse;
 }
-.cottage {
-    width: 10%;
+.headerImg {
+    width: 50%;
 }
 
 body {
