--- a/styles/plannedItinerary.css
+++ b/styles/plannedItinerary.css
@@ -1,9 +1,10 @@
 .rightContent {
     margin-left: 6rem;
+    margin-top:1rem;
     border: 1px solid black;
     padding: 1rem;
     background: rgba(255, 255, 255, 0.2);
-    margin-right: 1rem;
+    
 }
 .plan{
     padding-bottom: 1rem;
