added shadow for header image

--- a/styles/header.css
+++ b/styles/header.css
@@ -4,12 +4,10 @@ header {
     flex-direction: row-reverse;
     
     background-image: url("../images/Header-Image.jpg");
-  
-    /* vh = view height. min-height = the minimum amount the image will shrink when the window is made to be smaller. */
     height: 42vh;
     min-height: 200px;
   
-    /* Center and scale the image nicely */
+    box-shadow: black -6px 3px 25px 0px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
