--- a/styles/main.css
+++ b/styles/main.css
@@ -7,14 +7,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
 
-header {
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: row-reverse;
-}
-.cottage {
-    width: 10%;
-}
 
 body {
     background-image: url(../images/mona-eendra-vC8wj_Kphak-unsplash.jpg);
@@ -27,15 +19,16 @@ body {
 }
 
 .leftContent{
-    flex: 3;
+    width: 70%
 }
 
 .rightContent{
-    flex: 1;
+    width: 30%;
 }
 
 .filterContainer{
     display: flex;
+    width:140%;
 }
 
 h1, h3, button, .dialogTitle {
@@ -52,4 +45,10 @@ footer {
     position: absolute;
     height: 2.5rem;
     bottom: 0;
+}
+
+#previewWeather{
+    background-color: rgb(255, 255, 255, .2);
+    padding: 1rem;
+    border-radius: 3px;
 }
